@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Regenerate files for release commit automatically
 
 0.030     2016-09-29 15:20:00 EDT
   - Also set munge_build_pl = 0 for BumpVersionAfterRelease
